--- a/globalstyle.css
+++ b/globalstyle.css
@@ -16,182 +16,143 @@
   color: var(--color-text);
 }
 
-.text-small {
+.text-sm {
   font-size: small;
 }
 
+.text-xl {
+  font-size: x-large;
+}
+
+.text-xxl {
+  font-size: xx-large;
+}
 /* ------------------------------- navbar ------------------------------- */
 
 .navbar {
   background-color: var(--color-background);
+  color: white;
   display: flex;
   flex-direction: column;
-  color: white;
-  position: relative;
+  gap: 1rem;
+  padding: 1rem 2rem 1rem;
 }
 
-.navbar .navbar__logo {
-  padding: 2rem;
-}
-
-.navbar .navbar__items {
-  display: none;
-  padding: 0 1rem 1rem 1rem;
-}
-
-.navbar .navbar__items ul li {
-  list-style-type: none;
+.navbar .navbar-container {
   display: flex;
+  justify-content: space-between;
 }
 
-.navbar .navbar__items ul li a {
-  text-decoration: none;
-  background-color: var(--color-secondary);
+.navbar .navbar-container .navbar-logo,
+.navbar .navbar-container .navbar-hamberger_icon {
   padding: 1rem;
-  margin-bottom: 1rem;
-  display: inline-block;
-  width: calc(100% - 2rem);
-  overflow: hidden;
-  border-radius: 10rem;
-  position: relative;
 }
 
-.navbar .navbar__items ul li a:hover {
+.navbar .navbar-items,
+.navbar .navbar-items ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.navbar .navbar-items ul {
+  list-style-type: none;
+}
+
+.navbar .navbar-items ul li a {
+  padding: 1rem;
+  flex-grow: 1;
+  border-radius: 20rem;
+  text-decoration: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--color-secondary);
+}
+
+.navbar .navbar-items ul li a:hover {
   background-color: var(--color-accent);
   color: black;
 }
 
-.navbar .navbar__items--icon {
-  color: var(--color-background);
-  position: absolute;
-  transform: translate(-50%, 50%);
-  right: calc(-1.4rem);
-  bottom: 50%;
-  padding: 1rem 1rem 1rem 1rem;
-  background-color: var(--color-accent);
-  border-radius: 10rem;
-}
-
-.navbar .navbar__hamberger_icon {
-  position: absolute;
-  right: 2rem;
-  top: 2rem;
-}
+/* ------------------------------- buttons ------------------------------- */
 
 .button {
-  padding: 0.75rem 1.2rem;
-  border-radius: 1rem;
+  background-color: var(--color-accent);
   border: none;
   cursor: pointer;
-  font-size: 16px;
-  font-weight: 600;
-  background-color: var(--color-accent);
-  color: black;
   box-shadow: 3px 3px 5px black;
+  color: black;
+  font-size: 16px;
+  padding: 0.75rem 1.2rem;
+  border-radius: 1rem;
+  font-weight: 600;
 }
 
 .button i {
   color: black;
 }
 
-/* ------------------------------- buttons ------------------------------- */
-
-#buttonLetsChat {
+.button-chat {
   float: right;
-  margin: 1rem 0 0;
 }
 
-#buttonArrowUp {
-  display: none;
-  position: fixed;
+.button-arrow {
+  padding: 1rem 1.3rem;
+  border-radius: 10rem;
   transform: translate(-50%, 50%);
+  position: fixed;
+  z-index: 100;
+}
+
+.button-arrow-up {
+  display: none;
   right: 0;
   bottom: 7rem;
-  padding: 1rem 1.3rem;
-  border-radius: 10rem;
-  z-index: 100;
-  background-color: var(--color-accent);
-  color: var(--color-background);
-  border: none;
-  cursor: pointer;
-  box-shadow: 3px 3px 5px black;
 }
-#buttonArrowDown {
+.button-arrow-down {
   position: fixed;
-  transform: translate(-50%, 50%);
   right: 0;
   bottom: 3rem;
-  padding: 1rem 1.3rem;
-  border-radius: 10rem;
-  z-index: 100;
-  background-color: var(--color-accent);
-  color: var(--color-background);
-  border: none;
-  cursor: pointer;
-  box-shadow: 3px 3px 5px black;
-}
-
-#buttonViewProjects {
-  margin-left: 1rem;
-}
-
-#buttonViewLiveBestProject {
-  margin-left: 1rem;
-}
-
-/* ------------------------------- card ------------------------------- */
-
-.card {
-  background-color: var(--color-secondary);
-  border-radius: 1rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-
-.card-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 1rem;
-}
-
-.card-body {
-  padding: 1rem 1rem 0 1rem;
-}
-
-.card-options {
-  padding: 1rem;
-  display: flex;
-  justify-content: end;
 }
 
 /* ------------------------------- not yet sorted ------------------------------- */
 
-article {
-  background-color: var(--color-secondary);
-  padding: 1rem;
-  border-radius: 1rem;
-  margin-bottom: 1rem;
-}
-
 .social-media {
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
   display: flex;
-  justify-content: space-around;
-  padding: 2rem;
+  gap: 1rem;
 }
 
 @media only screen and (min-width: 640px) {
 }
 
 @media only screen and (min-width: 768px) {
+  .navbar {
+    flex-direction: row;
+    padding: 2rem;
+  }
+  
+  .navbar .navbar-container .navbar-hamberger_icon {
+    display: none;
+  }
+
+  .navbar .navbar-items,
+  .navbar .navbar-items ul {
+    flex-direction: row;
+    flex-grow: 1;
+  }
+
+  .navbar .navbar-items ul {
+    justify-content: center;
+  }
+
+  .navbar .navbar-items ul li a {
+    background: none;
+  }
+
+  .navbar .navbar-items ul li a i {
+    display: none;
+  }
 }
 
-@media only screen and (min-width: 1024px) {
-}
+@media only screen and (min-width: 1024px) {}
