--- a/projects.css
+++ b/projects.css
@@ -1,30 +1,72 @@
 @import "globalstyle.css";
 
+/* ------------------------------- card ------------------------------- */
+
+.card {
+  background-color: var(--color-secondary);
+  border-radius: 1rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  padding: 1rem;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 1rem;
+}
+
+.card-body {
+  padding: 1rem 1rem 0 1rem;
+}
+
+.card-options {
+  padding-top: 1rem;
+  display: flex;
+  justify-content: end;
+  gap: 1rem;
+}
+
 /* ------------------------------- section best project ------------------------------- */
 
 .best_project {
-  height: calc(100vh - 4rem);
   background-color: var(--color-background);
-  padding: 2rem;
+  padding: 0 2rem 2rem;
   display: flex;
   flex-direction: column;
 }
 
-.best_project article p {
+.best_project .best_project__introduction {
+  margin-bottom: 1rem;
+}
+
+.best_project .best_project__introduction p {
   text-align: justify;
 }
 
 /* ------------------------------- section projects ------------------------------- */
 
-.projects {
+.titleContainer {
   background-color: var(--color-background);
-  padding: 2rem;
+  padding: 0 2rem;
 }
 
-.projects .projects__title {
+.title {
   background-color: var(--color-secondary);
-  border-radius: 1rem;
-  padding: 1rem 2rem;
+  padding: 2rem;
+  border-radius: 20rem;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--color-background);
+  padding: 2rem;
 }
 
 /* ------------------------------- footer ------------------------------- */
@@ -34,6 +76,26 @@
 }
 
 .footer .footer__contact {
-    text-align: center;
-    padding-bottom: 2rem;
+  text-align: center;
+  padding-bottom: 2rem;
+}
+
+@media only screen and (min-width: 640px) {
+  .card-image {
+    height: 300px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .projects {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+  }
+  .footer .footer__contact {
+    padding-bottom: 1rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
 }
