--- a/globalstyle.css
+++ b/globalstyle.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans&display=swap"); */
 
 :root {
   --font-primary: "Open Sans";
@@ -16,10 +16,6 @@
   color: var(--color-text);
 }
 
-.text-sm {
-  font-size: small;
-}
-
 .text-xl {
   font-size: x-large;
 }
@@ -27,6 +23,22 @@
 .text-xxl {
   font-size: xx-large;
 }
+
+.text-justify {
+  text-align: justify;
+}
+
+.social-media {
+  display: flex;
+  gap: 1rem;
+}
+
+a, ul, li, p, i {
+  text-decoration: none;
+  list-style-type: none;
+  color: inherit;
+}
+
 /* ------------------------------- navbar ------------------------------- */
 
 .navbar {
@@ -34,43 +46,39 @@
   color: white;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
   padding: 1rem 2rem 1rem;
+  gap: 1rem;
 }
 
-.navbar .navbar-container {
+.navbar__container {
   display: flex;
   justify-content: space-between;
-}
-
-.navbar .navbar-container .navbar-logo,
-.navbar .navbar-container .navbar-hamberger_icon {
   padding: 1rem;
 }
 
-.navbar .navbar-items,
-.navbar .navbar-items ul {
+.navbar__items {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.navbar .navbar-items ul {
-  list-style-type: none;
+.navbar__items ul {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-.navbar .navbar-items ul li a {
+.navbar__items ul li a {
   padding: 1rem;
   flex-grow: 1;
   border-radius: 20rem;
-  text-decoration: none;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: var(--color-secondary);
 }
 
-.navbar .navbar-items ul li a:hover {
+.navbar__items li a:hover {
   background-color: var(--color-accent);
   color: black;
 }
@@ -79,22 +87,29 @@
 
 .button {
   background-color: var(--color-accent);
+  color: black;
+  padding: 0.5rem 1.2rem;
   border: none;
   cursor: pointer;
-  box-shadow: 3px 3px 5px black;
-  color: black;
-  font-size: 16px;
-  padding: 0.75rem 1.2rem;
+  font-size: medium;
   border-radius: 1rem;
   font-weight: 600;
 }
 
-.button i {
-  color: black;
+.button-medium {
+  padding: 1rem 1.5rem;
 }
 
-.button-chat {
-  float: right;
+.button-large {
+  padding: 1.4rem 2rem;
+}
+
+.button-shadow {
+  box-shadow: 3px 3px 5px black;
+}
+
+.button i {
+  color: black;
 }
 
 .button-arrow {
@@ -110,47 +125,64 @@
   right: 0;
   bottom: 7rem;
 }
+
 .button-arrow-down {
   position: fixed;
   right: 0;
   bottom: 3rem;
 }
 
-/* ------------------------------- not yet sorted ------------------------------- */
-
-.social-media {
-  display: flex;
-  gap: 1rem;
+.button-view_projects {
+  background-color: #b64282;
+  color: white;
 }
 
-@media only screen and (min-width: 640px) {
+.button-view_projects:hover {
+  background-color: #ba1771;
 }
+
+.button-view_projects i {
+  color: white;
+}
+
+/* ------------------------------- media queries ------------------------------- */
+
+@media only screen and (min-width: 640px) {}
 
 @media only screen and (min-width: 768px) {
   .navbar {
     flex-direction: row;
     padding: 2rem;
+    gap: 0;
   }
-  
-  .navbar .navbar-container .navbar-hamberger_icon {
+
+  .navbar__hamberger_icon {
     display: none;
   }
 
-  .navbar .navbar-items,
-  .navbar .navbar-items ul {
+  .navbar__items {
     flex-direction: row;
     flex-grow: 1;
+    justify-content: center;
+    gap: 0;
   }
 
-  .navbar .navbar-items ul {
+  .navbar__items ul {
+    flex-direction: row;
+    flex-grow: 1;
     justify-content: center;
   }
 
-  .navbar .navbar-items ul li a {
+  .navbar__items ul li a {
     background: none;
   }
 
-  .navbar .navbar-items ul li a i {
+  .navbar__items ul li a i {
+    display: none;
+  }
+
+  #buttonArrowUp,
+  #buttonArrowDown {
     display: none;
   }
 }
