--- a/index.css
+++ b/index.css
@@ -1,49 +1,40 @@
-/* Issues 
-  1. width 100vh and adding padding overflows y
-*/
-
 @import "globalstyle.css";
 
-section,
-aside {
+section {
   background-color: var(--color-background);
 }
 
 /* ------------------------------- section introduction ------------------------------- */
 
-#topSection {
+.top_section-flex {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   gap: 2rem;
 }
 
 .introduction {
-  padding: 1rem;
+  padding: 0 2rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
   align-items: stretch;
+  justify-content: center;
 }
 
 .introduction article {
   background-color: var(--color-secondary);
   padding: 1rem;
   border-radius: 1rem;
-}
-
-.introduction .introduction-options {
-  display: flex;
-  justify-content: end;
-  gap: 1rem;
-}
-
-.introduction .introduction-info {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  font-size: x-large;
+}
+
+.introduction-options {
+  display: flex;
+  justify-content: end;
+  gap: 1rem;
 }
 
 /* ------------------------------- section portrait ------------------------------- */
@@ -70,7 +61,7 @@ aside {
 /* ------------------------------- section skills ------------------------------- */
 
 .skills {
-  padding: 2rem 1rem;
+  padding: 2rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -81,42 +72,60 @@ aside {
   background-color: var(--color-secondary);
   padding: 1rem;
   border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.skills article ul {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 .skills article ul li {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 0.25rem;
 }
 
 /* ------------------------------- media queries ------------------------------- */
 
 @media only screen and (min-width: 640px) {
+}
+
+@media only screen and (min-width: 768px) {
+  .top_section {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .top_section-flex {
+    flex-direction: row;
+    flex-grow: 1;
+    padding: 0rem 2rem 2rem 2rem;
+    justify-content: end;
+  }
+
+  .introduction {
+    padding: 0;
+    max-width: 50%;
+  }
+
+  .portrait {
+    min-height: 0;
+    height: 100%;
+    width: calc(50% - 1rem);
+    border-radius: 1rem;
+  }
   .skills {
-    padding: 2rem 1rem;
-    position: relative;
+    padding: 2rem;
     flex-direction: row;
   }
 
   .skills article {
     border-radius: 1rem;
     width: 50%;
-    max-width: 400px;
-  }
-}
-
-@media only screen and (min-width: 768px) {
-  #topSection {
-    flex-direction: row;
-    padding: 0 2rem;
-  }
-
-  .introduction {
-    padding: 0;
-  }
-
-  .portrait {
-    border-radius: 1rem;
     max-width: 400px;
   }
 }
