--- a/projects.css
+++ b/projects.css
@@ -8,10 +8,13 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.2);
 }
 
 .card-image {
@@ -21,12 +24,7 @@
   border-radius: 1rem;
 }
 
-.card-body {
-  padding: 1rem 1rem 0 1rem;
-}
-
 .card-options {
-  padding-top: 1rem;
   display: flex;
   justify-content: end;
   gap: 1rem;
@@ -41,22 +39,22 @@
   flex-direction: column;
 }
 
-.best_project .best_project__introduction {
-  margin-bottom: 1rem;
-}
-
-.best_project .best_project__introduction p {
-  text-align: justify;
+.best_project__introduction {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding-bottom: 2rem;
 }
 
 /* ------------------------------- section projects ------------------------------- */
 
-.titleContainer {
+.separator {
   background-color: var(--color-background);
-  padding: 0 2rem;
+  display: flex;
+  justify-content: center;
 }
 
-.title {
+.separator__title {
   background-color: var(--color-secondary);
   padding: 2rem;
   border-radius: 20rem;
@@ -67,17 +65,22 @@
   flex-direction: column;
   background-color: var(--color-background);
   padding: 2rem;
+  gap: 1rem;
 }
 
 /* ------------------------------- footer ------------------------------- */
 
 .footer {
   background-color: var(--color-secondary);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
 }
 
-.footer .footer__contact {
+.footer__contact {
   text-align: center;
-  padding-bottom: 2rem;
 }
 
 @media only screen and (min-width: 640px) {
@@ -88,12 +91,7 @@
 
 @media only screen and (min-width: 768px) {
   .projects {
-    display: flex;
     flex-direction: row;
-    gap: 1rem;
-  }
-  .footer .footer__contact {
-    padding-bottom: 1rem;
   }
 }
 
