--- a/globalstyle.css
+++ b/globalstyle.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=PT+Sans&display=swap");
 
 :root {
   --font-primary: "Open Sans";
@@ -16,20 +16,14 @@
   color: var(--color-text);
 }
 
-body {
+html {
+  display: flex;
+  justify-content: center;
   background-color: var(--color-background);
 }
 
-.text-xl {
-  font-size: x-large;
-}
-
-.text-xxl {
-  font-size: xx-large;
-}
-
-.text-justify {
-  text-align: justify;
+body {
+  max-width: 1200px;
 }
 
 .social-media {
@@ -50,17 +44,19 @@ i {
 /* ------------------------------- navbar ------------------------------- */
 
 .navbar {
+  border-bottom: 2px solid var(--color-secondary);
   background-color: var(--color-background);
   color: white;
   display: flex;
   flex-direction: column;
-  padding: 1rem 2rem 1rem;
+  padding: 1rem;
   gap: 1rem;
 }
 
 .navbar__container {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 1rem;
 }
 
@@ -70,46 +66,35 @@ i {
   gap: 1rem;
 }
 
-.navbar__items ul {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
-.navbar__items ul li a {
+.navbar__items-item {
   padding: 1rem;
-  flex-grow: 1;
   border-radius: 20rem;
   display: flex;
-  justify-content: space-between;
+  gap: 1rem;
   align-items: center;
   background-color: var(--color-secondary);
 }
 
-.navbar__items li a:hover {
+.navbar__items-list-item:hover {
   background-color: var(--color-accent);
   color: black;
 }
-
 /* ------------------------------- buttons ------------------------------- */
 
 .button {
   background-color: var(--color-accent);
   color: black;
-  padding: 0.5rem 1.2rem;
+  padding: 0.8rem 1.5rem;
   border: none;
   cursor: pointer;
   font-size: medium;
-  border-radius: 1rem;
+  border-radius: 5px;
   font-weight: 600;
-}
-
-.button-medium {
-  padding: 1rem 1.5rem;
+  font-size: larger;
 }
 
 .button-large {
-  padding: 1.4rem 2rem;
+  padding: 1.3rem 1.7rem;
 }
 
 .button-shadow {
@@ -128,13 +113,13 @@ i {
   z-index: 100;
 }
 
-.button-arrow-up {
+.button-arrow--up {
   display: none;
   right: 0;
   bottom: 7rem;
 }
 
-.button-arrow-down {
+.button-arrow--down {
   position: fixed;
   right: 0;
   bottom: 3rem;
@@ -161,11 +146,11 @@ i {
 @media only screen and (min-width: 768px) {
   .navbar {
     flex-direction: row;
+    position: relative;
     padding: 2rem;
-    gap: 0;
   }
 
-  .navbar__hamberger_icon {
+  .navbar__hamberger-icon {
     display: none;
   }
 
@@ -173,21 +158,22 @@ i {
     flex-direction: row;
     flex-grow: 1;
     justify-content: center;
-    gap: 0;
+    /* will change the following */
+    margin-right: calc(91px);
   }
 
-  .navbar__items ul {
-    flex-direction: row;
-    flex-grow: 1;
-    justify-content: center;
-  }
-
-  .navbar__items ul li a {
+  .navbar__items-item {
     background: none;
   }
 
-  .navbar__items ul li a i {
+  .navbar__items-item i {
     display: none;
+  }
+
+  #buttonChat {
+    position: absolute;
+    right: 2rem;
+    /* margin-left: auto; */
   }
 
   #buttonArrowUp,
