--- a/index.css
+++ b/index.css
@@ -1,64 +1,81 @@
 @import "globalstyle.css";
 
-.hero-flex {
+/* ------------------------------- section hero (introduction + portrait) ------------------------------- */
+.hero {
   display: flex;
   flex-direction: column;
-  padding: 0 1rem;
+  padding: 1rem;
   gap: 1rem;
 }
 
 /* ------------------------------- section introduction ------------------------------- */
-
 .hero__introduction {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
-.hero__introduction > *:not(.hero__options) {
+.hero__introduction-title,
+.hero__introduction-options,
+.hero__introduction-info {
   background-color: var(--color-secondary);
   border-radius: 1rem;
   padding: 1rem;
 }
 
-.hero__title{
+.hero__introduction-title {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.hero__options {
+.hero__introduction-title h1 {
+  font-size: 1.5rem;
+}
+
+.hero__introduction-options {
   display: flex;
   justify-content: end;
+  align-items: end;
   gap: 1rem;
 }
 
-.hero__info {
+.hero__introduction-info {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   gap: 1rem;
-  background-color: var(--color-secondary);
+}
+
+.hero__introduction-info-item {
+  display: flex;
+  flex-direction: column;
 }
 
 /* ------------------------------- section portrait ------------------------------- */
 
 .hero__portrait {
   height: 100vh;
-  border-radius: 1rem;
-  background: no-repeat top center/cover
-    url("assets/images/a-happy-employee.jpg");
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
   text-align: center;
+  position: relative;
+  border-radius: 1rem;
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("assets/images/naruto.jpg") center/cover;
 }
 
 .hero__portrait-description {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+.hero__portrait-description h1 {
+  font-size: 2rem;
 }
 
 /* ------------------------------- section skills ------------------------------- */
@@ -71,23 +88,20 @@
   gap: 1rem;
 }
 
-.skills__technical,
-.skills__soft {
+.skills__item {
   background-color: var(--color-secondary);
   padding: 1rem;
   border-radius: 1rem;
 }
 
-.skills__technical_list,
-.skills__soft_list {
+.skills__list {
   padding-top: 2rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
-.skills__technical_list li,
-.skills__soft_list li {
+.skills__list li {
   display: flex;
   justify-content: space-between;
 }
@@ -98,53 +112,29 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .hero-flex {
+  .hero {
     flex-direction: row;
-    padding: 0 2rem;
-    justify-content: center;
   }
   .hero__introduction,
   .hero__portrait {
-    width: 50%;
+    flex: 1;
     height: auto;
   }
   .skills {
-    padding: 2rem;
     flex-direction: row;
-    justify-content: center;
-    gap: 1rem;
   }
-
-  .skills__technical,
-  .skills__soft {
-    width: 50%;
+  .skills__item {
+    flex: 1;
   }
 }
 
 @media only screen and (min-width: 1024px) {
   .hero {
-    height: 100vh;
-    display: flex;
-    align-items: stretch;
-    flex-direction: column;
-  }
-  .hero-flex {
-    flex-grow: 1;
     padding: 2rem;
-    justify-content: end;
-    gap: 1rem;
+    gap: 2rem;
   }
-  .hero__introduction {
-    justify-content: center;
-    align-items: end;
-  }
-
-  .hero__introduction > * {
-    width: 75%;
-  }
-
-  .skills__technical,
-  .skills__soft {
-    width: 30%;
+  .skills {
+    gap: 2rem;
+    padding: 0 2rem 2rem;
   }
 }
