--- a/projects.css
+++ b/projects.css
@@ -63,6 +63,7 @@
 .projects {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   background-color: var(--color-background);
   padding: 2rem;
   gap: 1rem;
@@ -71,7 +72,7 @@
 /* ------------------------------- footer ------------------------------- */
 
 .footer {
-  background-color: var(--color-secondary);
+  border-bottom: 5px solid var(--color-secondary);
   padding: 2rem;
   display: flex;
   flex-direction: column;
@@ -92,6 +93,10 @@
 @media only screen and (min-width: 768px) {
   .projects {
     flex-direction: row;
+  }
+  .best_project {
+    padding: 2rem;
+    /* height: 100vh; */
   }
 }
 
