--- a/projects.css
+++ b/projects.css
@@ -10,6 +10,7 @@
   padding: 1rem;
   display: flex;
   flex-direction: column;
+  /* justify-content: space-between; */
   gap: 1rem;
 }
 
@@ -19,9 +20,8 @@
 
 .card-image {
   width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 1rem;
+  height: auto;
+  border-radius: 1rem 1rem 3px 3px;
 }
 
 .card-options {
@@ -33,17 +33,18 @@
 /* ------------------------------- section best project ------------------------------- */
 
 .best_project {
+  /* height: calc(100vh - 130px); */
   background-color: var(--color-background);
-  padding: 0 2rem 2rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 
 .best_project__introduction {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding-bottom: 2rem;
 }
 
 /* ------------------------------- section projects ------------------------------- */
@@ -55,8 +56,9 @@
 }
 
 .separator__title {
+  margin: 1rem 0;
   background-color: var(--color-secondary);
-  padding: 2rem;
+  padding: 1rem 2rem;
   border-radius: 20rem;
 }
 
@@ -65,7 +67,7 @@
   flex-direction: column;
   justify-content: center;
   background-color: var(--color-background);
-  padding: 2rem;
+  padding: 1rem;
   gap: 1rem;
 }
 
@@ -85,20 +87,24 @@
 }
 
 @media only screen and (min-width: 640px) {
-  .card-image {
-    height: 300px;
-  }
 }
 
 @media only screen and (min-width: 768px) {
-  .projects {
-    flex-direction: row;
-  }
   .best_project {
     padding: 2rem;
-    /* height: 100vh; */
+    /* height: calc(100vh - 182px); */
+  }
+  .projects {
+    flex-direction: row;
   }
 }
 
 @media only screen and (min-width: 1024px) {
+  .best_project__introduction {
+    text-align: center;
+  }
+
+  .best_project__introduction h1 {
+    font-size: 3rem;
+  }
 }
